--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,500&display=swap');
 body{
-    font-family: 'Roboto', Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Roboto Flex', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',sans-serif;
+    background-image: url("../imagens/Imagem da tela de login.jpg");
+    height: 100vh;
+    width: 100vw;
+}
+@media screen and (min-width:768px) and (max-width:992px){
+    body{
+        background-color: rgb(0, 166, 255);
+    }
+}
+    
+main{
+    width: 100vw;
+    height: 100vh;
 }
