--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,8 @@ body{
 @media screen and (min-width:768px) and (max-width:992px){
     body{
         background-color: rgb(0, 166, 255);
+        width: 250px;
+        height: 500px;
     }
 }
     
