--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,19 +3,29 @@ body{
     padding: 0px;
     margin: 0px;
     font-family: 'Roboto Flex', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',sans-serif;
-    background-image: url("../imagens/Imagem da tela de login.jpg");
     height: 100vh;
     width: 100vw;
-}
-@media screen and (min-width:768px) and (max-width:992px){
-    body{
-        background-color: rgb(0, 166, 255);
-        width: 250px;
-        height: 500px;
-    }
+    background-color: rgb(34, 34, 255);
 }
     
 main{
     width: 100vw;
     height: 100vh;
+    position: relative;    
+}
+section#login{
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50,-50%);
+}
+section#login div#imagem{
+    background-image:  url(../imagens/Imagem\ da\ tela\ de\ login.jpg);
+    background-size: cover;
+    height: 200px;
 }
