--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,7 +23,7 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50,-50%);
+    transform: translate(-50%,-50%);
 }
 section#login div#imagem{
     display: block;
