--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,7 @@ footer{
     text-align: center;
     text-decoration: none;
     align-items: end;
+    color: white;
 }
 main{
     width: 100vw;
