--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Roboto Flex', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',sans-serif;
     height: 100vh;
     width: 100vw;
-    background-color: rgb(34, 34, 255);
+    background-color: rgb(34, 34, 255)
 }
 footer{
     background-color: black;
@@ -16,8 +16,7 @@ footer{
 }
 main{
     width: 100vw;
-    height: 100vh;
-    position: relative;    
+    height: 100vh;    
 }
 section#login{
     overflow: hidden;
@@ -30,12 +29,14 @@ section#login{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    transition: width 1s height 1s;
 }
 section#login div#imagem{
     display: block;
     background-image:  url(../imagens/Imagem\ da\ tela\ de\ login.jpg);
     background-size: cover;
     height: 200px;
+    background-position: center;
 }
 section#login div#formulário{
     display: block;    
