--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,15 +36,16 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
+    background-image: url(../imagens/metal.jpg);
     background-size: cover;
     background-position: left bottom;
+    background-repeat: no-repeat;
     height: 200px;
 }
 
 section#login > div#formulario {
     display: block;
-    padding: 10px;
+    padding: 5px;
 }
 
 div#formulario > h1 {
