--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,9 +36,9 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background-image: url(../imagens/metal.jpg);
+    background-image: url(../imagens/Imagem\ da\ tela\ de\ login.jpg);
     background-size: cover;
-    background-position: left bottom;
+    background-position: center center;
     background-repeat: no-repeat;
     height: 200px;
 }
