--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,10 +54,12 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
 }
-
+section#login > h1{
+    text-align: center;
+    padding-bottom: 5px;
+}
 form > div.campo {
     background-color: #5f2c82;
-    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
