--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,3 +1,14 @@
+@charset "UTF-8";
+
+/* Typical Device Breakpoints
+------------------------------
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
+
 @media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -22,12 +33,12 @@
 
 @media screen and (min-width: 992px) { /* CONFIGURAÇÕES PARA DESKTOP */
     body {
-        background-image: linear-gradient(to top, #0400ff, #5f2c82);
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
-        width: 30vw;
-        height: 30vh;
+        width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -48,82 +59,5 @@
     div#formulario > p {
         font-size: 1em;
         margin: 20px 0px;
-    }
-}
-@media screen {
-    form > div.campo {
-        background-color: #5f2c82;
-        display: block;
-        width: 100%;
-        height: 40px;
-        border-radius: 8px;
-        margin: 5px 0px;
-    }
-    
-    div.campo > label {
-        display: none;
-    }
-    
-    div.campo > i {
-        color: white;
-        /*background-color: black;*/
-        font-size: 1.9em;
-        width: 40px;
-        padding: 5px;
-    }
-    
-    div.campo > input {
-        background-color: #94cfcd;
-        font-size: 1em;
-        width: calc(100% - 45px);
-        height: 100%;
-        border: 0px;
-        border-radius: 8px;
-        padding: 4px;
-        transform: translateY(-10px);
-    }
-    
-    div.campo > input:focus-within {
-        background-color: white;
-        border: none;
-    }
-    
-    form > input[type=submit] {
-        display: block;
-        font-size: 1em;
-        width: 100%;
-        height: 40px;
-        background-color: #53aaa7;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    
-    form > input[type=submit]:hover {
-        background-color: #2d6462;
-    }
-    
-    form > a.botao {
-        display: block;
-        text-align: center;
-        font-size: 1em;
-        width: 100%;
-        height: 40px;
-        padding-top: 5px;
-        margin-top: 5px;
-        background-color: white;
-        color: #2d6462;
-        border: 1px solid #49a09d;
-        border-radius: 7px;
-        text-decoration: none;
-    }
-    
-    form > a.botao:hover {
-        background-color: #6cd3cf;
-    }
-    
-    form > a.botao > i {
-        font-size: 0.8em;
     }
 }
