--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -7,7 +9,7 @@
 }
 
 body, html {
-    background-color: #00d08b;
+    background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
 }
@@ -23,27 +25,25 @@ section#login {
     top: 50%;
     left: 50%;
     overflow: hidden;
+
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
     transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
-    
 }
 
 section#login > div#imagem {
     display: block;
-    background-image: url(../imagens/Imagem\ da\ tela\ de\ login.jpg);
+    background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
     background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+    background-position: left bottom;
     height: 200px;
 }
-section#login > p{
-    padding-right: 5px;
-}
+
 section#login > div#formulario {
     display: block;
     padding: 10px;
@@ -57,7 +57,80 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
 }
-section#login > h1{
+
+form > div.campo {
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: white;
+    /*background-color: black;*/
+    font-size: 1.9em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-10px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #53aaa7;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao {
+    display: block;
     text-align: center;
-    padding-bottom: 5px;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #6cd3cf;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
 }
