--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,7 +38,7 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagens/metal.jpg) no-repeat;
+    background: #5f2c82 url(../imagens/Imagem\ da\ tela\ de\ login.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
     height: 200px;
