--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,8 +59,8 @@ div#formulario > p {
 }
 
 form > div.campo {
-    background-color: #5f2c82;
-    border: 2px solid #5f2c82;
+    background-color: #0011ff;
+    border: 2px solid #008db4;
     display: block;
     width: 100%;
     height: 40px;
