--- a/estilos/style das curiosidades.css
+++ b/estilos/style das curiosidades.css
@@ -3,7 +3,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-ul > li{
+ul li{
     padding: 5px 0px;
+}
+ul{
     text-decoration: none;
 }
